--- a/config/i3/config
+++ b/config/i3/config
@@ -188,10 +188,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec --no-startup-id feh --bg-scale ~/Pictures/background.png
+exec --no-startup-id feh --bg-scale ~/Images/background.png
 exec_always --no-startup-id picom --config ~/.config/i3/picom.conf -b
 exec_always --no-startup-id "killall polybar; polybar -r default"
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id /usr/libexec/polkit-gnome-authentication-agent-1 &
 for_window [class=".*"] border pixel 2
 #gaps inner 6
 gaps inner 0
